added teacher to the demo and removed the second reference to the entityframework in the web.config file.

--- a/DemoMVCMySql/Views/Shared/_Layout.cshtml
+++ b/DemoMVCMySql/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 </button>
                 @Html.ActionLink("Login", "Login", "Login", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Dashboard", "Dashboard", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Create Incident", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Teacher", "Teacher", "Teacher", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Update Incident", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Search For Incident", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Reports", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
